--- a/music.html
+++ b/music.html
@@ -36,7 +36,7 @@
             <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
-        <!-- When you click on one of the media items, more information  regarding single media should be displayed in a modal window (including Description field). -->
+        <!-- TASK: When you click on one of the media items, more information  regarding single media should be displayed in a modal window (including Description field). -->
 
         <!-- Modal Dalida -->
         <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
